--- a/app/src/main/res/layout/activity_carrilto.xml
+++ b/app/src/main/res/layout/activity_carrilto.xml
@@ -42,7 +42,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="410dp"
+        android:layout_marginTop="600dp"
         android:layout_marginEnd="29dp"
         android:text="Fecha de solicitud de medicamentos"
         android:textColor="@color/white"
@@ -60,10 +60,10 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="430dp"
+        android:layout_marginTop="620dp"
         android:layout_marginEnd="79dp"
         android:hint="Seleccionar fecha"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvSelectDate" />
