--- a/app/src/main/res/layout/activity_analgesicos.xml
+++ b/app/src/main/res/layout/activity_analgesicos.xml
@@ -37,11 +37,13 @@
 
     <ListView
         android:id="@+id/listaVista"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="393dp"
+        android:layout_height="450dp"
         android:layout_below="@+id/imageButton3"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true" />
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp" />
 
     <ImageButton
         android:id="@+id/imageButton3"
@@ -54,5 +56,30 @@
         android:backgroundTint="@color/teal_700"
         android:src="@android:drawable/ic_menu_revert" />
 
+
+    <!-- Funcionalidad de pedidos por voz -->
+    <Button
+        android:id="@+id/bvoice"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="520dp"
+        android:layout_marginEnd="219dp"
+        android:text="@string/btnTalk" />
+
+    <ListView
+        android:id="@+id/lvVoiceReturn"
+        android:layout_width="wrap_content"
+        android:layout_height="65dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="570dp"
+        android:layout_marginEnd="32dp">
+    </ListView>
 
 </RelativeLayout>
