--- a/app/src/main/res/layout/activity_analgesicos.xml
+++ b/app/src/main/res/layout/activity_analgesicos.xml
@@ -60,14 +60,14 @@
     <!-- Funcionalidad de pedidos por voz -->
     <Button
         android:id="@+id/bvoice"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
+        android:layout_width="334dp"
+        android:layout_height="48dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="16dp"
         android:layout_marginTop="520dp"
-        android:layout_marginEnd="219dp"
+        android:layout_marginEnd="45dp"
         android:text="@string/btnTalk" />
 
     <ListView
