--- a/app/src/main/res/layout/activity_bebidas.xml
+++ b/app/src/main/res/layout/activity_bebidas.xml
@@ -12,11 +12,11 @@
 
     <ListView
         android:id="@+id/listaBebida"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="393dp"
+        android:layout_height="450dp"
         android:layout_below="@+id/imageButton4"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="2dp" />
 
     <TextView
         android:id="@+id/textView6"
@@ -37,5 +37,31 @@
         android:background="@drawable/circulo"
         android:backgroundTint="@color/teal_700"
         android:src="@android:drawable/ic_menu_revert" />
+
+    <!-- Funcionalidad de pedidos por voz -->
+    <Button
+        android:id="@+id/bvoice"
+        android:layout_width="334dp"
+        android:layout_height="48dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="520dp"
+        android:layout_marginEnd="45dp"
+        android:text="@string/btnTalk" />
+
+    <ListView
+        android:id="@+id/lvVoiceReturn"
+        android:layout_width="wrap_content"
+        android:layout_height="65dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="570dp"
+        android:layout_marginEnd="32dp">
+    </ListView>
+
 
 </RelativeLayout>
