--- a/app/src/main/res/layout/activity_acerca.xml
+++ b/app/src/main/res/layout/activity_acerca.xml
@@ -50,4 +50,33 @@
         android:backgroundTint="@android:color/holo_green_dark"
         android:text="Contactanos" />
 
+    <org.osmdroid.views.MapView
+        android:id="@+id/map"
+        android:layout_width="374dp"
+        android:layout_height="238dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="278dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="199dp" />
+
+    <TextView
+        android:id="@+id/Ubicanos"
+        android:layout_width="122dp"
+        android:layout_height="44dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="228dp"
+        android:layout_marginEnd="257dp"
+        android:layout_marginBottom="443dp"
+        android:text="@string/ubi"
+        android:textSize="20sp" />
+
+
 </RelativeLayout>
