--- a/app/src/main/res/layout/activity_acerca.xml
+++ b/app/src/main/res/layout/activity_acerca.xml
@@ -64,7 +64,7 @@
         android:layout_marginBottom="199dp" />
 
     <TextView
-        android:id="@+id/Ubicanos"
+        android:id="@+id/TextUbicacion"
         android:layout_width="122dp"
         android:layout_height="44dp"
         android:layout_alignParentStart="true"
@@ -77,6 +77,7 @@
         android:layout_marginBottom="443dp"
         android:text="@string/ubi"
         android:textSize="20sp" />
+
 
 
 </RelativeLayout>
