--- a/app/src/main/res/layout/activity_registro_sms.xml
+++ b/app/src/main/res/layout/activity_registro_sms.xml
@@ -50,15 +50,21 @@
 
     <TextView
         android:id="@+id/txtC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="264dp"
+        android:layout_height="57dp"
+        android:layout_above="@+id/codigo"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="11dp"
+        android:layout_marginLeft="11dp"
+        android:layout_marginTop="399dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginBottom="13dp"
         android:text="Ingrese el Código"
         android:textColor="@color/white"
         android:textSize="25sp" />
-
 
     <EditText
         android:id="@+id/Pwreg"
@@ -81,8 +87,9 @@
         android:layout_alignBottom="@+id/Pwreg"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="41dp"
-        android:layout_marginRight="41dp"
+        android:layout_marginEnd="19dp"
+        android:layout_marginRight="19dp"
+        android:layout_marginBottom="-189dp"
         android:background="@drawable/consulta"
         android:onClick="enviar"
         android:src="@android:drawable/ic_dialog_email" />
@@ -103,14 +110,41 @@
         android:id="@+id/codigo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txtC"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginEnd="63dp"
+        android:layout_marginRight="63dp"
+        android:layout_marginBottom="192dp"
         android:layout_toStartOf="@+id/save"
         android:layout_toLeftOf="@+id/save"
         android:ems="10"
         android:inputType="numberPassword"
         android:textColor="@color/white"
         android:textSize="25sp" />
+
+    <EditText
+        android:id="@+id/editMail"
+        android:layout_width="wrap_content"
+        android:layout_height="46dp"
+        android:layout_below="@+id/textView14"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="128dp"
+        android:layout_marginBottom="365dp"
+        android:ems="10"
+        android:inputType="textEmailAddress" />
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="292dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="228dp"
+        android:layout_marginEnd="103dp"
+        android:text="Correo Electronico"
+        android:textSize="30sp" />
 
 </RelativeLayout>
