--- a/app/src/main/res/layout/activity_camara.xml
+++ b/app/src/main/res/layout/activity_camara.xml
@@ -17,5 +17,6 @@
     <ImageView
         android:id="@+id/imageViewCamara"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="#F4F0F0" />
 </LinearLayout>
