--- a/app/src/main/res/layout/activity_categorias.xml
+++ b/app/src/main/res/layout/activity_categorias.xml
@@ -119,6 +119,7 @@
         android:layout_marginTop="86dp"
         android:layout_marginEnd="262dp"
         android:layout_marginBottom="572dp"
+        android:backgroundTint="@color/teal_700"
         android:text="Receta" />
 
 
