--- a/app/src/main/res/layout/activity_analgesicos.xml
+++ b/app/src/main/res/layout/activity_analgesicos.xml
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Mariscos"
+        android:text="Medicamentos"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold" />
 
