--- a/app/src/main/res/layout/activity_parrillada.xml
+++ b/app/src/main/res/layout/activity_parrillada.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Parrilladas"
+        android:text="Medicamentos"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold" />
 
