--- a/app/src/main/res/layout/activity_porciones.xml
+++ b/app/src/main/res/layout/activity_porciones.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Porciones"
+        android:text="Medicamentos"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold" />
 
