--- a/app/src/main/res/layout/activity_analgesicos.xml
+++ b/app/src/main/res/layout/activity_analgesicos.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/y"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fodoazul"
@@ -9,24 +10,17 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.proyecto2pdm115.Analgesicos">
 
-
-    <ImageView
-        android:id="@+id/mainimage"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="5"
-        android:adjustViewBounds="true"
-        android:contentDescription="@string/imagen2001"
-        android:src="@mipmap/ic_launcher" />
-    <Button
-        android:id="@+id/mainbttomarfoto"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:text="@string/boton2001" />
+    <ListView
+        android:id="@+id/listaPorciones"
+        android:layout_width="393dp"
+        android:layout_height="450dp"
+        android:layout_below="@+id/imageButton2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="2dp" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -34,27 +28,16 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold" />
 
-    <ListView
-        android:id="@+id/listaVista"
-        android:layout_width="393dp"
-        android:layout_height="450dp"
-        android:layout_below="@+id/imageButton3"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="2dp"
-        android:layout_marginRight="2dp" />
-
     <ImageButton
-        android:id="@+id/imageButton3"
+        android:id="@+id/imageButton2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_alignTop="@+id/textView3"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:background="@drawable/circulo"
         android:backgroundTint="@color/teal_700"
         android:src="@android:drawable/ic_menu_revert" />
-
 
     <!-- Funcionalidad de pedidos por voz -->
     <Button
