--- a/app/src/main/res/layout/activity_antibioticos.xml
+++ b/app/src/main/res/layout/activity_antibioticos.xml
@@ -7,10 +7,26 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.proyecto2pdm115.parrillada">
+    tools:context="com.example.proyecto2pdm115.Antibioticos">
+
+
+    <ImageView
+        android:id="@+id/mainimage"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="5"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/imagen2001"
+        android:src="@mipmap/ic_launcher" />
+    <Button
+        android:id="@+id/mainbttomarfoto"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="@string/boton2001" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -19,24 +35,26 @@
         android:textStyle="bold" />
 
     <ListView
-        android:id="@+id/parrilla"
+        android:id="@+id/listaVista"
         android:layout_width="393dp"
         android:layout_height="450dp"
-        android:layout_below="@+id/imageButton"
-        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/imageButton3"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="2dp" />
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/imageButton3"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_alignParentTop="true"
+        android:layout_alignTop="@+id/textView3"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:background="@drawable/circulo"
         android:backgroundTint="@color/teal_700"
         android:src="@android:drawable/ic_menu_revert" />
+
 
     <!-- Funcionalidad de pedidos por voz -->
     <Button
