--- a/app/src/main/res/layout/activity_suplementos.xml
+++ b/app/src/main/res/layout/activity_suplementos.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/y"
+    android:id="@+id/Bebidas"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fodoazul"
@@ -8,19 +8,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.proyecto2pdm115.porciones">
+    tools:context="com.example.proyecto2pdm115.Suplementos">
 
     <ListView
-        android:id="@+id/listaPorciones"
+        android:id="@+id/listaBebida"
         android:layout_width="393dp"
         android:layout_height="450dp"
-        android:layout_below="@+id/imageButton2"
-        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/imageButton4"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="2dp" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -29,7 +28,7 @@
         android:textStyle="bold" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/imageButton4"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentTop="true"
@@ -63,5 +62,6 @@
         android:layout_marginTop="570dp"
         android:layout_marginEnd="32dp">
     </ListView>
+
 
 </RelativeLayout>
