--- a/app/src/main/res/layout/activity_varios.xml
+++ b/app/src/main/res/layout/activity_varios.xml
@@ -1,6 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/Bebidas"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fodoazul"
@@ -8,18 +7,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.proyecto2pdm115.bebidas">
-
-    <ListView
-        android:id="@+id/listaBebida"
-        android:layout_width="393dp"
-        android:layout_height="450dp"
-        android:layout_below="@+id/imageButton4"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="2dp" />
+    tools:context="com.example.proyecto2pdm115.Varios">
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -27,8 +18,17 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold" />
 
+    <ListView
+        android:id="@+id/parrilla"
+        android:layout_width="393dp"
+        android:layout_height="450dp"
+        android:layout_below="@+id/imageButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="2dp" />
+
     <ImageButton
-        android:id="@+id/imageButton4"
+        android:id="@+id/imageButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentTop="true"
@@ -62,6 +62,5 @@
         android:layout_marginTop="570dp"
         android:layout_marginEnd="32dp">
     </ListView>
-
 
 </RelativeLayout>
